# zkEVMBootcamp

./: .gitignore  .gitmodules  Homework2.md  Homework3.md  Homework4.md
Homework14/: Cargo.toml
Homework14/src/: main.rs
bootcamp/: README.md
bootcamp/src/: main.rs
hello-world/host/src/: main.rs
ruffini/: Cargo.toml
ruffini/src/: main.rs
rust/homeworks/homework10/collections/: hashmap1.rs  hashmap2.rs
rust/homeworks/homework10/enums/: enums2.rs  enums3.rs
rust/homeworks/homework10/option/: option1.rs  option2.rs
rust/homeworks/homework13/error_handling/: errors1.rs  errors3.rs  errors4.rs  errors5.rs  errors6.rs
rust/homeworks/homework13/traits/: traits2.rs
rust/homeworks/homework3/functions/: functions1.rs
rust/homeworks/homework3/primitive_types/: primitive_types3.rs
rust/homeworks/homework3/variables/: variables2.rs  variables3.rs  variables6.rs
rust/src/: main.rs
